hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_arity_mismatch2.php.exp
File "explicit_type_collection_arity_mismatch2.php", line 4, characters 8-11:
Too few arguments (Naming[2037])
